src/test/contracts/top_level_patterns/negative/jsligo/tuple_record.jsligo
// TODO: write this in jsligo

// type r = { a : nat ; b : int  ; c : string }

// let r = ( { a = 1n ; b = 1 ; c = "H" }
//         , { a = 2n ; b = 2 ; c = "E" }
//         , { a = 3n ; b = 3 ; c = "L" } 
//         )
// let ( { a = a1 ; b = b1 ; c = c1 }
//     , { a = a2 ; b = b2 ; c = a2 }
//     , { a = a3 ; b = b3 ; c = c3 }
//     ) = r